--- a/index.html
+++ b/index.html
@@ -4,120 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minimal Drawing Board</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            display: flex;
-            height: 100vh;
-            background-color: #f0f2f5;
-            color: #333;
-        }
-
-        /* Main Layout */
-        .container {
-            display: flex;
-            flex: 1;
-            gap: 20px;
-            padding: 20px;
-        }
-
-        /* Left AI Tab */
-        .ai-tab {
-            width: 200px;
-            background-color: #fff;
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .ai-tab h3 {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-            color: #1a73e8;
-        }
-
-        .ai-tab p {
-            font-size: 0.9rem;
-            color: #666;
-        }
-
-        /* Center Canvas */
-        .canvas-container {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #drawingCanvas {
-            background-color: #fff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            max-width: 100%;
-            max-height: 100%;
-        }
-
-        /* Right Tools Bar */
-        .tools-bar {
-            width: 200px;
-            background-color: #fff;
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .tools-bar button, .tools-bar input {
-            padding: 10px;
-            border: none;
-            border-radius: 8px;
-            background-color: #1a73e8;
-            color: #fff;
-            font-size: 0.9rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .tools-bar button:hover {
-            background-color: #1557b0;
-        }
-
-        .tools-bar input[type="color"],
-        .tools-bar input[type="range"] {
-            background-color: transparent;
-            padding: 0;
-            cursor: pointer;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-                padding: 10px;
-            }
-
-            .ai-tab, .tools-bar {
-                width: 100%;
-                margin-bottom: 10px;
-            }
-
-            #drawingCanvas {
-                width: 100%;
-                height: auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/prohv/CSIEntryTask/main/styles.css">      
 </head>
 <body>
     <div class="container">
